--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
 	</head>
 	<body>
 		<header>
-			<h1 class="browntext">Mormon Migration Micro-History</h1>
-			<h2>Shropshire, Illinois, Utah, & San Bernadino</h2>
+			<h1 class="browntext">FINDING FAMILY</h1>
+			<h2> The son of a British Mormon convert and his pioneer journey to Zion</h2>
+			<h3>Shropshire &bull; Pottawattamie &bull; Utah &bull; San Bernardino</h3>
 		</header>
 		<nav id="navbar" class="blueborder browntext">
-			<div class="navigation-entry"><a href="/pages/home.html" target="the_frame">Home</a></div>
-			<div class="navigation-entry"><a href="/pages/narratives.html" target="the_frame">Narratives</a></div>
-			<div class="navigation-entry"><a href="/pages/poppett-family.html" target="the_frame">Poppett Family</a></div>
-			<div class="navigation-entry"><a href="/pages/friends-associates-neighbors.html" target="the_frame">Friends, Associates, Neighbors</a></div>
-			<div class="navigation-entry"><a href="/pages/galleries.html" target="the_frame">Galleries</a></div>
-			<div class="navigation-entry"><a href="/pages/sources.html" target="the_frame">Sources</a></div>
-			<div class="navigation-entry"><a href="/pages/analytics.html" target="the_frame">Analytics</a></div>
+			<div class="bar-entry bar-link-entry"><a href="/pages/home.html" target="the_frame">Home</a></div>
+			<div class="bar-entry bar-link-entry"><a href="/pages/narratives.html" target="the_frame">Narratives</a></div>
+			<div class="bar-entry bar-link-entry"><a href="/pages/analytics.html" target="the_frame">Analytics</a></div>
+			<div class="bar-entry bar-link-entry"><a href="/pages/galleries.html" target="the_frame">Galleries</a></div>
+			<div class="bar-entry bar-link-entry"><a href="/pages/about-kristine-forbes.html" target="the_frame">About Kristine Forbes</a></div>
+			<div class="bar-entry bar-link-entry"><a href="/pages/sources.html" target="the_frame">Sources</a></div>
 		</nav>
 		<main id="below-navbar">
 			<aside id="sidebar" class="blueborder browntext">
-				<div class="navigation-entry"><a href="/pages/handy-references.html" target="the_frame">Handy References</a></div>
-				<div class="navigation-entry"><a href="/pages/timelines.html" target="the_frame">Timelines</a></div>
-				<div class="navigation-entry"><a href="/pages/maps.html" target="the_frame">Maps</a></div>
-				<div class="navigation-entry"><a href="/pages/family-tree-branches.html" target="the_frame">Family Tree Branches</a></div>
+				<div class="bar-entry">Handy References</div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/timeline.html" target="the_frame">Mormon History Timeline</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/maps.html" target="the_frame">Maps</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/poppett-case-tree.html" target="the_frame">Poppett/Case Tree</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/fan-collaborators.html" target="the_frame">FAN Collaborators</a></div>
 			</aside>
 			<iframe name="the_frame" id="the_frame" src="/pages/narrative.html">
 			</iframe>
