--- a/index.html
+++ b/index.html
@@ -6,25 +6,30 @@
 	</head>
 	<body>
 		<header>
-			<h1 class="browntext">FINDING FAMILY</h1>
-			<h2> The son of a British Mormon convert and his pioneer journey to Zion</h2>
-			<h3>Shropshire &bull; Pottawattamie &bull; Utah &bull; San Bernardino</h3>
+			<h1>FINDING FAMILY</h1>
+			<h2 class="browntext"> The son of a British Mormon convert and his pioneer journey to Zion</h2>
+			<h3 class="browntext">Shropshire &bull; Pottawattamie &bull; Utah &bull; San Bernardino</h3>
 		</header>
-		<nav id="navbar" class="blueborder browntext">
-			<div class="bar-entry bar-link-entry"><a href="/pages/home.html" target="the_frame">Home</a></div>
-			<div class="bar-entry bar-link-entry"><a href="/pages/narratives.html" target="the_frame">Narratives</a></div>
-			<div class="bar-entry bar-link-entry"><a href="/pages/analytics.html" target="the_frame">Analytics</a></div>
-			<div class="bar-entry bar-link-entry"><a href="/pages/galleries.html" target="the_frame">Galleries</a></div>
-			<div class="bar-entry bar-link-entry"><a href="/pages/about-kristine-forbes.html" target="the_frame">About Kristine Forbes</a></div>
-			<div class="bar-entry bar-link-entry"><a href="/pages/sources.html" target="the_frame">Sources</a></div>
+		<nav id="navbar" class="blueborder">
+			<div id="align_left">
+				<div class="bar-entry bar-link-entry"><a href="/pages/home.html" target="the_frame">Home</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/narratives.html" target="the_frame">Narratives</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/fan-collaborators.html" target="the_frame"><b>F</b>riends, <b>A</b>ssociates, <b>N</b>eighbors</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/places.html" target="the_frame">Places</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/analytics.html" target="the_frame">Analytics</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/scrapbook.html" target="the_frame">Scrapbook</a></div>
+			</div>
+			<div id="align_right">
+				<div class="bar-entry bar-link-entry"><a href="/pages/sources.html" target="the_frame">Sources</a></div>
+				<div class="bar-entry bar-link-entry"><a href="/pages/about-kristine-forbes.html" target="the_frame">About Kristine Forbes</a></div>
+			</div>
 		</nav>
 		<main id="below-navbar">
-			<aside id="sidebar" class="blueborder browntext">
-				<div class="bar-entry">Handy References</div>
+			<aside id="sidebar" class="blueborder">
+				<div class="bar-entry" id="quick-reference-title"><b>Quick Reference</b></div>
 				<div class="bar-entry bar-link-entry"><a href="/pages/timeline.html" target="the_frame">Mormon History Timeline</a></div>
 				<div class="bar-entry bar-link-entry"><a href="/pages/maps.html" target="the_frame">Maps</a></div>
 				<div class="bar-entry bar-link-entry"><a href="/pages/poppett-case-tree.html" target="the_frame">Poppett/Case Tree</a></div>
-				<div class="bar-entry bar-link-entry"><a href="/pages/fan-collaborators.html" target="the_frame">FAN Collaborators</a></div>
 			</aside>
 			<iframe name="the_frame" id="the_frame" src="/pages/narrative.html">
 			</iframe>
