--- a/index.html
+++ b/index.html
@@ -3,63 +3,63 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="static/index.css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="/static/script.js"></script>
+		<!-- <script src="/static/script.js"></script> -->
 	</head>
 	<body>
 		<header>
-			<div id="translucent-background">
-				<h1>Finding Family: The Poppett Line</h1>
-				<h2 class="browntext"> The son of a British Mormon convert and his pioneer journey to Zion</h2>
+			<div id="headertext">
+				<h1>Finding Family</h1>
+				<h2>The son of a British Mormon convert and his pioneer journey to Zion</h2>
 			</div>
 		</header>
+		<div id="banner">
+			<div id="translucent-background">
+			</div>
+		</div>
 		<div id="content">
 			<div id="sidebar">
 				<div class="sidebar-section" id="external-resources">
-					<div class="bar-entry-title"><b>Published Sources</b></div>
-					<div class="bar-entry-link"><a href="/pages/timeline.html" target="the_frame">Quick Mormon History</div>
-					<div class="bar-entry-link"><a href="/pages/maps.html" target="the_frame">Maps</a></div>
-					<div class="bar-entry-link"><a href="/pages/maps.html" target="the_frame">Favorite Research Links</a></div>
+					<div class="sidebar-entry-title"><b>Published Sources</b></div>
+					<div class="sidebar-entry-link"><a href="/pages/timeline.html" target="the_frame">Quick Mormon History</div>
+					<div class="sidebar-entry-link"><a href="/pages/maps.html" target="the_frame">Maps</a></div>
+					<div class="sidebar-entry-link"><a href="/pages/maps.html" target="the_frame">Favorite Research Links</a></div>
 				</div>
 				<div class="sidebar-section" id="bulletin-board">
-					<div class="bar-entry-title"><b>Bulletin Board</b></div>
-					<div class="bar-entry-link"><a href="/pages/poppett-case-tree.html" target="the_frame">Quick Charts</a></div>
-					<div class="bar-entry-link"><a href="/pages/poppett-case-tree.html" target="the_frame">Quick Notes</a></div>
-					<div class="bar-entry-link"><a href="/pages/poppett-case-tree.html" target="the_frame">Favorite Links</a></div>
+					<div class="sidebar-entry-title"><b>Bulletin Board</b></div>
+					<div class="sidebar-entry-link"><a href="/pages/poppett-case-tree.html" target="the_frame">Quick Charts</a></div>
+					<div class="sidebar-entry-link"><a href="/pages/poppett-case-tree.html" target="the_frame">Quick Notes</a></div>
+					<div class="sidebar-entry-link"><a href="/pages/poppett-case-tree.html" target="the_frame">Favorite Links</a></div>
 				</div>
 			</div>
 			<div id="topbar-and-iframe">
 				<div id="topbar">
-					<div id="topbar-left-section">
-						<div class="dropdown">
-							<div class="bar-entry-link"><a href="#">About</a></div>
-							<div class="dropdown-content" id="about-dropdown">
-								<div class="bar-entry-link"><a href="#" target="the_frame">Genesis of Project</a></div>
-								<div class="bar-entry-link"><a href="#" target="the_frame">How to Use This Site</a></div>
-								<div class="bar-entry-link"><a href="#" target="the_frame">Kristine Forbes</a></div>
-							</div>
+					<div class="topbar-entry-link"><a href="/pages/home.html" target="the_frame">Home</a></div>
+					<div class="dropdown">
+						<div class="topbar-entry-link"><a href="#">About</a></div>
+						<div class="dropdown-content" id="about-dropdown">
+							<div class="topbar-entry-link"><a href="/pages/genesis-of-project.html" target="the_frame">Genesis of Project</a></div>
+							<div class="topbar-entry-link"><a href="/pages/how-to-use-this-site.html" target="the_frame">How to Use This Site</a></div>
+							<div class="topbar-entry-link"><a href="/pages/about-kristine-forbes.html" target="the_frame">Kristine Forbes</a></div>
 						</div>
-						<div class="bar-entry-link"><a href="#" target="the_frame">Tree</a></div>
-						<div class="dropdown">
-							<div class="bar-entry-link"><a href="#">Narratives</a></div>
-							<div class="dropdown-content" id="narratives-dropdown">
-								<div class="bar-entry-link"><a href="/pages/places.html" target="the_frame">Narrative Essays</a></div>
-								<div class="bar-entry-link"><a href="/pages/analytics.html" target="the_frame">Narrative Reports</a></div>
-								<div class="bar-entry-link"><a href="/pages/analytics.html" target="the_frame">Narrative Briefs</a></div>
-							</div>
-						</div>
-						<div class="bar-entry-link"><a href="/pages/places.html" target="the_frame">Profiles</a></div>
-						<div class="bar-entry-link"><a href="/pages/analytics.html" target="the_frame">Charts and Graphs</a></div>
-						<div class="bar-entry-link"><a href="/pages/scrapbook.html" target="the_frame">Gallery</a></div>
 					</div>
-					<div id="topbar-right-section">
-						<div class="dropdown">
-							<div class="bar-entry-link"><a href="#">Sources</a></div>
-							<div class="dropdown-content">
-								<div class="bar-entry-link"><a href="/pages/sources.html" target="the_frame">Documents</a></div>
-								<div class="bar-entry-link"><a href="/pages/sources.html" target="the_frame">Bibliograhpy</a></div>
-							</div>
+					<div class="topbar-entry-link"><a href="#" target="the_frame">Tree</a></div>
+					<div class="dropdown">
+						<div class="topbar-entry-link"><a href="#">Narratives</a></div>
+						<div class="dropdown-content" id="narratives-dropdown">
+							<div class="topbar-entry-link"><a href="/pages/places.html" target="the_frame">Narrative Essays</a></div>
+							<div class="topbar-entry-link"><a href="/pages/analytics.html" target="the_frame">Narrative Reports</a></div>
+							<div class="topbar-entry-link"><a href="/pages/analytics.html" target="the_frame">Narrative Briefs</a></div>
 						</div>
-						<div class="bar-entry-link"><a href="/pages/about-kristine-forbes.html" target="the_frame">About Kristine Forbes</a></div>
+					</div>
+					<div class="topbar-entry-link"><a href="/pages/places.html" target="the_frame">Profiles</a></div>
+					<div class="topbar-entry-link"><a href="/pages/analytics.html" target="the_frame">Charts and Graphs</a></div>
+					<div class="topbar-entry-link"><a href="/pages/scrapbook.html" target="the_frame">Gallery</a></div>
+					<div class="dropdown">
+						<div class="topbar-entry-link"><a href="#">Sources</a></div>
+						<div class="dropdown-content">
+							<div class="topbar-entry-link"><a href="/pages/sources.html" target="the_frame">Documents</a></div>
+							<div class="topbar-entry-link"><a href="/pages/sources.html" target="the_frame">Bibliograhpy</a></div>
+						</div>
 					</div>
 				</div>
 				<iframe name="the_frame" id="the_frame" src="/pages/home.html">
