--- a/index.html
+++ b/index.html
@@ -7,35 +7,39 @@
 	</head>
 	<body>
 		<header>
+			<div id="group-photo">
+				<img src="/static/group-photo.jpg">
+				</img>
+			</div>
 			<div id="headertext">
-				<h1>Finding Family</h1>
-				<h2>The son of a British Mormon convert and his pioneer journey to Zion</h2>
+				<span id="title">FINDING FAMILY</span>
+				<span id="subtitle">A young British Mormon convert and his pioneer journey to Zion</span>
+			</div>
+			<div id="house-photo">
+				<img src="/static/house-photo.jpg">
+				</img>
 			</div>
 		</header>
-		<div id="banner">
-			<div id="translucent-background">
-			</div>
-		</div>
 		<div id="content">
 			<div id="sidebar">
 				<div class="sidebar-title"><b>Mormon History Resources</b></div>
-				<div class="sidebar-entry-link"><a href="/resources/timelines" target="the_frame">Timelines</a></div>
-				<div class="sidebar-entry-link"><a href="/resources/places" target="the_frame">Places</a></div>
+				<div class="sidebar-entry-link"><a href="/resources/timelines/index.html" target="the_frame">Timelines</a></div>
+				<div class="sidebar-entry-link"><a href="/resources/places/index.html" target="the_frame">Places</a></div>
 				<div class="sidebar-section" id="bulletin-board">
 					<div class="sidebar-entry-title"><b>Lists</b></div>
-					<div class="sidebar-entry-link"><a href="/resources/lists/lds-clan-intermarriages" target="the_frame">LDS Clan Intermarriages</a></div>
-					<div class="sidebar-entry-link"><a href="/resources/lists/lord-sandon-passenger-list-page-with-robert-poppett" target="the_frame">Lord Sandon Passenger List Pages with Robert Poppett</a></div>
+					<div class="sidebar-entry-link"><a href="/resources/lists/lds-clan-intermarriages/index.html" target="the_frame">LDS Clan Intermarriages</a></div>
+					<div class="sidebar-entry-link"><a href="/resources/lists/lord-sandon-passenger-list-page-with-robert-poppett/index.html" target="the_frame">Lord Sandon Passenger List Pages with Robert Poppett</a></div>
 				</div>
 			</div>
 			<div id="topbar-and-iframe">
 				<div id="topbar">
-					<div class="topbar-entry-link"><a href="/home" target="the_frame">Home</a></div>
-					<div class="topbar-entry-link"><a href="/genealogy-puzzles" target="the_frame">Genealogy Puzzles</a></div>
-					<div class="topbar-entry-link"><a href="/narratives" target="the_frame">Narratives</a></div>
-					<div class="topbar-entry-link"><a href="/poppett-gallery" target="the_frame">Poppett Gallery</a></div>
-					<div class="topbar-entry-link"><a href="/case-gallery" target="the_frame">Case Gallery</a></div>
-					<div class="topbar-entry-link"><a href="/fan" target="the_frame">Friends, Associates, Neighbors</a></div>
-					<div class="topbar-entry-link"><a href="/about" target="the_frame">About</a></div>
+					<div class="topbar-entry-link"><a href="/home/index.html" target="the_frame">Home</a></div>
+					<div class="topbar-entry-link"><a href="/genealogy-puzzles/index.html" target="the_frame">Genealogy Puzzles</a></div>
+					<div class="topbar-entry-link"><a href="/narratives/index.html" target="the_frame">Narratives</a></div>
+					<div class="topbar-entry-link"><a href="/poppett-gallery/index.html" target="the_frame">Poppett Gallery</a></div>
+					<div class="topbar-entry-link"><a href="/case-gallery/index.html" target="the_frame">Case Gallery</a></div>
+					<div class="topbar-entry-link"><a href="/fan/index.html" target="the_frame">Friends, Associates, Neighbors</a></div>
+					<div class="topbar-entry-link"><a href="/about/index.html" target="the_frame">About</a></div>
 				</div>
 				<iframe name="the_frame" id="the_frame" src="/home">
 				</iframe>
