--- a/case-gallery/gashum-case/index.html
+++ b/case-gallery/gashum-case/index.html
@@ -1,5 +1,5 @@
 <h1 id="gashum-case">Gashum Case</h1>
 <ul>
-<li><p><a href="photos">Photos</a></p></li>
-<li><p><a href="records">Records</a></p></li>
+<li><p><a href="photos/index.html">Photos</a></p></li>
+<li><p><a href="records/index.html">Records</a></p></li>
 </ul>
