--- a/case-gallery/index.html
+++ b/case-gallery/index.html
@@ -1,4 +1,4 @@
 <h1 id="case-gallery">Case Gallery</h1>
 <ul>
-<li><a href="gashum-case">Gashum Case</a></li>
+<li><a href="gashum-case/index.html">Gashum Case</a></li>
 </ul>
