--- a/fan/index.html
+++ b/fan/index.html
@@ -1,10 +1,10 @@
 <h1 id="friends-associates-neighbors">Friends, Associates, Neighbors</h1>
 <ul>
-<li><p><a href="alfred-benson">Alfred Benson</a></p></li>
-<li><p><a href="alvah-downey">Alvah Downey</a></p></li>
-<li><p><a href="bushrod-wilson">Bushrod Wilson</a></p></li>
-<li><p><a href="cox">Cox</a></p></li>
-<li><p><a href="daley">Daley</a></p></li>
-<li><p><a href="dodson">Dodson</a></p></li>
-<li><p><a href="van-leuven">Van Leuven</a></p></li>
+<li><p><a href="alfred-benson/index.html">Alfred Benson</a></p></li>
+<li><p><a href="alvah-downey/index.html">Alvah Downey</a></p></li>
+<li><p><a href="bushrod-wilson/index.html">Bushrod Wilson</a></p></li>
+<li><p><a href="cox/index.html">Cox</a></p></li>
+<li><p><a href="daley/index.html">Daley</a></p></li>
+<li><p><a href="dodson/index.html">Dodson</a></p></li>
+<li><p><a href="van-leuven/index.html">Van Leuven</a></p></li>
 </ul>
