--- a/resources/places/index.html
+++ b/resources/places/index.html
@@ -1,13 +1,13 @@
 <h1 id="places">Places</h1>
 <ul>
-<li><a href="british-mission">British Mission</a></li>
-<li><a href="california-gold">California Gold</a></li>
-<li><a href="joseph-smith-places">Joseph Smith Places</a></li>
-<li><a href="liverpool-to%20new-orleans">Liverpool To New Orleans</a></li>
-<li><a href="mormon-battalion">Mormon Battalion</a></li>
-<li><a href="san-bernardino-colony">San Bernardino Colony</a></li>
-<li><a href="staging-areas">Staging Areas</a></li>
-<li><a href="trail-to%20san-bernardino">Trail To San Bernardino</a></li>
-<li><a href="trek-to-utah">Trek To Utah</a></li>
-<li><a href="utah">Utah</a></li>
+<li><a href="british-mission/index.html">British Mission</a></li>
+<li><a href="california-gold/index.html">California Gold</a></li>
+<li><a href="joseph-smith-places/index.html">Joseph Smith Places</a></li>
+<li><a href="liverpool-to%20new-orleans/index.html">Liverpool To New Orleans</a></li>
+<li><a href="mormon-battalion/index.html">Mormon Battalion</a></li>
+<li><a href="san-bernardino-colony/index.html">San Bernardino Colony</a></li>
+<li><a href="staging-areas/index.html">Staging Areas</a></li>
+<li><a href="trail-to%20san-bernardino/index.html">Trail To San Bernardino</a></li>
+<li><a href="trek-to-utah/index.html">Trek To Utah</a></li>
+<li><a href="utah/index.html">Utah</a></li>
 </ul>
