--- a/poppett-gallery/index.html
+++ b/poppett-gallery/index.html
@@ -1,10 +1,10 @@
 <h1 id="poppett-gallery">Poppett Gallery</h1>
 <ul>
-<li><a href="freighting">Freighting</a></li>
-<li><a href="journals-and%20histories">Journals And Histories</a></li>
-<li><a href="newspaper-articles">Newspaper Articles</a></li>
-<li><a href="personal-papers">Personal Papers</a></li>
-<li><a href="photos">Photos</a></li>
-<li><a href="poppett-properties">Poppett Properties</a></li>
-<li><a href="shropshire-poppetts">Shropshire Poppetts</a></li>
+<li><a href="freighting/index.html">Freighting</a></li>
+<li><a href="journals-and%20histories/index.html">Journals And Histories</a></li>
+<li><a href="newspaper-articles/index.html">Newspaper Articles</a></li>
+<li><a href="personal-papers/index.html">Personal Papers</a></li>
+<li><a href="photos/index.html">Photos</a></li>
+<li><a href="poppett-properties/index.html">Poppett Properties</a></li>
+<li><a href="shropshire-poppetts/index.html">Shropshire Poppetts</a></li>
 </ul>
