--- a/resources/places/british-mission/index.html
+++ b/resources/places/british-mission/index.html
@@ -12,13 +12,13 @@
 <p><strong>Maps </strong></p>
 <p>Robert Poppett was born in Shropshire, near Wales.</p>
 <blockquote>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/Places/british-mission/media/image1.JPG" width="389" height="450" /></p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/Places/british-mission/media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Coal mining areas near Shropshire.jpg" width="541" height="364" /></p>
+<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/british-mission/media/image1.JPG" width="389" height="450" /></p>
+<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/british-mission/media/image2.jpeg"></p>
 </blockquote>
 <p><strong>Links</strong></p>
-<p>This site includes <em>The Millennial Star</em>, the early Mormon newspaper, and links to the history associated with the Poppett family conversion. – British Mission and Early Mormon Missionaries <a href="https://history.lds.org/missionary/mission/british?lang=eng" class="uri">https://history.lds.org/missionary/mission/british?lang=eng</a></p>
-<p>Thomas Dunlop Brown was a missionary who baptized Robert’s fellow passenger, Thomas Davies – Thomas Dunlop Brown <a href="https://history.lds.org/missionary/individual/thomas-d-dunlop-brown-1807?lang=eng" class="uri">https://history.lds.org/missionary/individual/thomas-d-dunlop-brown-1807?lang=eng</a></p>
-<p>For Welsh immigrants, voyages, and biographies – Welsh Mormon History <a href="http://welshmormon.byu.edu/Immigrants_Listing.aspx" class="uri">http://welshmormon.byu.edu/Immigrants_Listing.aspx</a></p>
-<p>This Mormon site contains a history of the church in Britain – The Church in the British Isles <a href="http://www.lightplanet.com/mormons/daily/history/british/html" class="uri">http://www.lightplanet.com/mormons/daily/history/british/html</a>.</p>
+<p>This site includes <em>The Millennial Star</em>, the early Mormon newspaper, and links to the history associated with the Poppett family conversion. – <a href="https://history.lds.org/missionary/mission/british?lang=eng" class="uri">British Mission and Early Mormon Missionaries</a></p>
+<p>Thomas Dunlop Brown was a missionary who baptized Robert’s fellow passenger, Thomas Davies – <a href="https://history.lds.org/missionary/individual/thomas-d-dunlop-brown-1807?lang=eng" class="uri">Thomas Dunlop Brown</a></p>
+<p>For Welsh immigrants, voyages, and biographies – <a href="http://welshmormon.byu.edu/Immigrants_Listing.aspx" class="uri">Welsh Mormon History</a></p>
+<p>This Mormon site contains a history of the church in Britain – <a href="http://www.lightplanet.com/mormons/daily/history/british/html" class="uri">The Church in the British Isles</a>.</p>
 </body>
 </html>
