--- a/resources/places/index.html
+++ b/resources/places/index.html
@@ -3,4 +3,11 @@
 <li><a href="joseph-smith-places">Joseph Smith Places</a></li>
 <li><a href="british-mission">British Mission</a></li>
 <li><a href="liverpool-to-new-orleans">Liverpool to New Orleans</a></li>
+<li><a href="staging-areas">Staging Areas</a></li>
+<li><a href="mormon-battalion">Mormon Battalion</a></li>
+<li><a href="trek-to-utah">Trek to Utah</a></li>
+<li><a href="utah">Utah</a></li>
+<li><a href="california-gold">California Gold</a></li>
+<li><a href="trail-to-san-bernardino">Trail to San Bernardino</a></li>
+<li><a href="san-bernardino-colony">San Bernardino Colony</a></li>
 </ul>
