--- a/resources/places/joseph-smith-places/index.html
+++ b/resources/places/joseph-smith-places/index.html
@@ -10,7 +10,7 @@
 <body>
 <h2 id="joseph-smith-places">Joseph Smith Places</h2>
 <p><strong>Maps</strong></p>
-<p><a href="http://www.josephsmithpapers.org/bc-jsp/content/jsp/images/content/library/pdf/illustration_1832_trips.pdf" class="uri">Joseph Smith’s Travels between Ohio and Missouri</a></p>
+<p>Joseph Smith’s Travels between Ohio and Missouri – <a href="http://www.josephsmithpapers.org/bc-jsp/content/jsp/images/content/library/pdf/illustration_1832_trips.pdf" class="uri">http://www.josephsmithpapers.org/bc-jsp/content/jsp/images/content/library/pdf/illustration_1832_trips.pdf</a></p>
 <p><strong>Links</strong></p>
 <p>Links to a broad variety of sources for early Mormon history – <a href="https://familysearch.org/wiki/en/Early_Church_Information_File_(ECIF)" class="uri">Early Church Information File</a></p>
 <p>The Joseph Smith Papers contain journals, administrative records, histories, and business papers of the earliest days of the Mormon Church – <a href="http://www.josephsmithpapers.org/" class="uri">The Joseph Smith Papers</a></p>
