--- a/resources/places/liverpool-to-new-orleans/index.html
+++ b/resources/places/liverpool-to-new-orleans/index.html
@@ -10,9 +10,9 @@
 <body>
 <h2 id="liverpool-to-new-orleans">Liverpool to New Orleans</h2>
 <p><strong>Links</strong></p>
-<p>This site lists Mormon passengers and voyages – Mormon Migration <a href="https://mormonmigration.lib.byu.edu/mii/voyage/214?mii=on&amp;query=Poppett&amp;voyage=on&amp;scandinavia=on&amp;dateFrom=&amp;sweden=on&amp;europe=on&amp;netherlands=on&amp;account=on&amp;passenger=on&amp;dateTo" class="uri">https://mormonmigration.lib.byu.edu/mii/voyage/214?mii=on&amp;query=Poppett&amp;voyage=on&amp;scandinavia=on&amp;dateFrom=&amp;sweden=on&amp;europe=on&amp;netherlands=on&amp;account=on&amp;passenger=on&amp;dateTo</a>=</p>
-<p>The <em>Lord Sandon</em> ship manifest that lists Robert and his fellow Mormon passengers – New Orleans Passenger Lists – 7 Feb to 29 May 1849 <a href="https://familysearch.org/ark:/61903/3:1:33SQ-G5JH-56P?cc=1916009" class="uri">https://familysearch.org/ark:/61903/3:1:33SQ-G5JH-56P?cc=1916009</a></p>
-<p>A journal entry from the Church Agent at New Orleans in 1849, Elder Lucias Scovil – <a href="https://dcms.lds.org/delivery/DeliveryManagerServlet?dps_pid=IE407735&amp;page=328" class="uri">https://dcms.lds.org/delivery/DeliveryManagerServlet?dps_pid=IE407735&amp;page=328</a></p>
+<p>This site lists Mormon passengers and voyages – <a href="https://mormonmigration.lib.byu.edu/mii/voyage/214?mii=on&amp;query=Poppett&amp;voyage=on&amp;scandinavia=on&amp;dateFrom=&amp;sweden=on&amp;europe=on&amp;netherlands=on&amp;account=on&amp;passenger=on&amp;dateTo" class="uri">Mormon Migration</a>=</p>
+<p>The <em>Lord Sandon</em> ship manifest that lists Robert and his fellow Mormon passengers – <a href="https://familysearch.org/ark:/61903/3:1:33SQ-G5JH-56P?cc=1916009" class="uri">New Orleans Passenger Lists – 7 Feb to 29 May 1849</a></p>
+<p><a href="https://dcms.lds.org/delivery/DeliveryManagerServlet?dps_pid=IE407735&amp;page=328" class="uri">https://dcms.lds.org/delivery/DeliveryManagerServlet?dps_pid=IE407735&amp;page=32</p>
 <p><strong>Pictures</strong></p>
 <p><img src="/home/dylan/code/mine/seeegma.github.io/resources/Places/liverpool-to-new-orleans/media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\on the ship in dock.jpg" width="585" height="347" /></p>
 <p>Figure 1 - On the ship in dock</p>
