--- a/resources/places/british-mission/index.html
+++ b/resources/places/british-mission/index.html
@@ -12,8 +12,8 @@
 <p><strong>Maps </strong></p>
 <p>Robert Poppett was born in Shropshire, near Wales.</p>
 <blockquote>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/british-mission/media/image1.JPG" width="389" height="450" /></p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/british-mission/media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Coal mining areas near Shropshire.jpg" width="541" height="364" /></p>
+<p><img src="media/image1.JPG" width="389" height="450" /></p>
+<p><img src="media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Coal mining areas near Shropshire.jpg" width="541" height="364" /></p>
 </blockquote>
 <p><strong>Links</strong></p>
 <p>This site includes <em>The Millennial Star</em>, the early Mormon newspaper, and links to the history associated with the Poppett family conversion. – British Mission and Early Mormon Missionaries <a href="https://history.lds.org/missionary/mission/british?lang=eng" class="uri">https://history.lds.org/missionary/mission/british?lang=eng</a></p>
