--- a/resources/places/california-gold/index.html
+++ b/resources/places/california-gold/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h2 id="california-gold">California Gold </h2>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/california-gold/media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Sam-Brannans-Store-at-Sutters-Fort.jpg" width="163" height="95" /></p>
+<p><img src="media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Sam-Brannans-Store-at-Sutters-Fort.jpg" width="163" height="95" /></p>
 <p><strong>Maps</strong></p>
 <p>?</p>
 <p><strong>Links</strong></p>
