--- a/resources/places/liverpool-to-new-orleans/index.html
+++ b/resources/places/liverpool-to-new-orleans/index.html
@@ -14,11 +14,11 @@
 <p>The <em>Lord Sandon</em> ship manifest that lists Robert and his fellow Mormon passengers – New Orleans Passenger Lists – 7 Feb to 29 May 1849 <a href="https://familysearch.org/ark:/61903/3:1:33SQ-G5JH-56P?cc=1916009" class="uri">https://familysearch.org/ark:/61903/3:1:33SQ-G5JH-56P?cc=1916009</a></p>
 <p>A journal entry from the Church Agent at New Orleans in 1849, Elder Lucias Scovil – <a href="https://dcms.lds.org/delivery/DeliveryManagerServlet?dps_pid=IE407735&amp;page=328" class="uri">https://dcms.lds.org/delivery/DeliveryManagerServlet?dps_pid=IE407735&amp;page=328</a></p>
 <p><strong>Pictures</strong></p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/liverpool-to-new-orleans/media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\on the ship in dock.jpg" width="585" height="347" /></p>
+<p><img src="media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\on the ship in dock.jpg" width="585" height="347" /></p>
 <p>Figure 1 - On the ship in dock</p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/liverpool-to-new-orleans/media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Liverpool Dock 1846.jpg" width="303" height="325" /></p>
+<p><img src="media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Liverpool Dock 1846.jpg" width="303" height="325" /></p>
 <p>Figure 2- Liverpool dock, 1846</p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/liverpool-to-new-orleans/media/image3.jpeg" alt="C:\Users\owner\AppData\Local\Microsoft\Windows\INetCache\Content.Word\emigrant ship circa 1850.jpg" width="344" height="450" /></p>
+<p><img src="media/image3.jpeg" alt="C:\Users\owner\AppData\Local\Microsoft\Windows\INetCache\Content.Word\emigrant ship circa 1850.jpg" width="344" height="450" /></p>
 <p>Figure 3- Pratt and Smart, &quot;Life on Board a Mormon Emigrant Ship,&quot; 16.</p>
 </body>
 </html>
