--- a/resources/places/san-bernardino-colony/index.html
+++ b/resources/places/san-bernardino-colony/index.html
@@ -10,9 +10,9 @@
 <body>
 <h2 id="san-bernardino-colony">San Bernardino Colony </h2>
 <p><strong>Maps</strong></p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/san-bernardino-colony/media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Mount San Bernardino and view of Valley.jpg" width="515" height="356" /></p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/san-bernardino-colony/media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Mormon stockade (2).jpg" width="617" height="295" /><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/san-bernardino-colony/media/image3.jpeg" alt="\\CASCADIA\Public\Poppett Case Mormon\Poppett HUB files\9 San Bernardino Colony\Postcard of old SB.JPG" width="399" height="254" /></p>
-<p><img src="/home/dylan/code/mine/seeegma.github.io/resources/places/san-bernardino-colony/media/image4.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\San Bernardino, California 1852.jpg" width="624" height="273" /></p>
+<p><img src="media/image1.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Mount San Bernardino and view of Valley.jpg" width="515" height="356" /></p>
+<p><img src="media/image2.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\Mormon stockade (2).jpg" width="617" height="295" /><img src="media/image3.jpeg" alt="\\CASCADIA\Public\Poppett Case Mormon\Poppett HUB files\9 San Bernardino Colony\Postcard of old SB.JPG" width="399" height="254" /></p>
+<p><img src="media/image4.jpeg" alt="C:\Users\Kristine\AppData\Local\Microsoft\Windows\INetCache\Content.Word\San Bernardino, California 1852.jpg" width="624" height="273" /></p>
 <p><em>Early plot laid out by Lyman &amp; Rich</em></p>
 <p><em>The San Bernardino Valley, including the Mission and San Salvador area</em></p>
 <p><strong>Links</strong></p>
