update sidebar with new places stuff

--- a/index.html
+++ b/index.html
@@ -23,8 +23,36 @@
 		<div id="content">
 			<div id="sidebar">
 				<div class="sidebar-title"><b>Mormon History Resources</b></div>
+				<div class="sidebar-section" id="places">
+					<div class="sidebar-entry-title"><b>Places</b></div>
+					<div class="sidebar-entry-link">Early Church (1831-1839)</div>
+					<div class="sidebar-entry-link">Nauvoo</div>
+					<div class="sidebar-dropdown">
+						<div class="sidebar-entry-link">British Mission</div>
+						<div class="sidebar-dropdown-content">
+							<div class="sidebar-entry-link">Missionaries</div>
+							<div class="sidebar-entry-link">Conferences</div>
+							<div class="sidebar-entry-link">Liverpool to New Orleans</div>
+						</div>
+					</div>
+					<div class="sidebar-entry-link">Staging Areas in Nebraska and Iowa</div>
+					<div class="sidebar-entry-link">Mormon Battalion</div>
+					<div class="sidebar-entry-link">Trek to Utah</div>
+					<div class="sidebar-entry-link">Utah Zion</div>
+					<div class="sidebar-entry-link">Mormons in California Gold Fields </div>
+					<div class="sidebar-entry-link">Desert trail from Utah to San Bernardino</div>
+					<div class="sidebar-dropdown">
+						<div class="sidebar-entry-link">San Bernardino Colony</div>
+						<div class="sidebar-dropdown-content">
+							<div class="sidebar-entry-link">Fort 1851-1854</div>
+							<div class="sidebar-entry-link">1853 Survey</div>
+							<div class="sidebar-entry-link">Freighting [move this here from Poppett Gallery]</div>
+							<div class="sidebar-entry-link">Overview and Links</div>
+							<div class="sidebar-entry-link">Pioneer Lists</div>
+						</div>
+					</div>
+				</div>
 				<div class="sidebar-entry-link"><a href="/resources/timelines/index.html" target="the_frame">Timelines</a></div>
-				<div class="sidebar-entry-link"><a href="/resources/places/index.html" target="the_frame">Places</a></div>
 				<div class="sidebar-section" id="bulletin-board">
 					<div class="sidebar-entry-title"><b>Lists</b></div>
 					<div class="sidebar-entry-link"><a href="/resources/lists/lds-clan-intermarriages/index.html" target="the_frame">LDS Clan Intermarriages</a></div>
