remove little note on Freighting

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="sidebar-dropdown-content">
 							<div class="sidebar-entry-link">Fort 1851-1854</div>
 							<div class="sidebar-entry-link">1853 Survey</div>
-							<div class="sidebar-entry-link">Freighting [move this here from Poppett Gallery]</div>
+							<div class="sidebar-entry-link">Freighting</div>
 							<div class="sidebar-entry-link">Overview and Links</div>
 							<div class="sidebar-entry-link">Pioneer Lists</div>
 						</div>
