add hoverover links to new san-bernardino pages

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 					<div class="sidebar-entry-link">Trek to Utah</div>
 					<div class="sidebar-entry-link">Utah Zion</div>
 					<div class="sidebar-entry-link">Mormons in California Gold Fields </div>
-					<div class="sidebar-entry-link">Desert trail from Utah to San Bernardino</div>
+					<div class="sidebar-entry-link">Desert Trail from Utah to San Bernardino</div>
 					<div class="sidebar-dropdown">
 						<div class="sidebar-entry-link">San Bernardino Colony</div>
 						<div class="sidebar-dropdown-content">
-							<div class="sidebar-entry-link">Fort 1851-1854</div>
-							<div class="sidebar-entry-link">1853 Survey</div>
-							<div class="sidebar-entry-link">Freighting</div>
 							<div class="sidebar-entry-link">Overview and Links</div>
-							<div class="sidebar-entry-link">Pioneer Lists</div>
+							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/fort-1851-1854/index.html" target="the_frame">Fort 1851-1854</a></div>
+							<div class="sidebar-entry-link">1853 Survey</div>
+							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/freighting/index.html" target="the_frame">Freighting</a></div>
+							<div class="sidebar-entry-link"><a href="/resources/places/san-bernardino-colony/pioneer-lists/index.html" target="the_frame">Pioneer Lists</a></div>
 						</div>
 					</div>
 				</div>
